# ai-powered-personalised-marketing

./: .gitignore  E2E_TESTING.md  README.md  SYSTEM_FLOW.md  demo_orders.csv  docker-compose.yml  flavorflow.pen
backend/: .env.example  CAMPAIGN_API_GUIDE.md  EMBEDDING_GUIDE.md  PREFERENCE_ENGINE_GUIDE.md  SEGMENTATION_API_GUIDE.md  TESTING.md  alembic.ini  pyproject.toml  setup_test_db.sh  test_embedding_standalone.py  test_preference_manual.py  test_task004.py  test_task006_manual.py  test_task007_manual.py  test_task008_manual.py  test_task010_manual.py  test_task013_manual.py  verify_models.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_campaigns_tables.py
backend/app/: main.py
backend/app/core/: config.py  constants.py  csv_mappings.py  exceptions.py  logging.py
backend/app/db/: session.py  vector_store.py
backend/app/models/: __init__.py  base.py  brand.py  campaign.py  campaign_recipient.py  customer.py  customer_preference.py  ingestion_job.py  (+3 more)
backend/docs/: OPENROUTER_CLIENT_GUIDE.md  PREFERENCE_ENGINE_GUIDE.md
backend/scripts/: clear_data.py  rebuild_taste_profiles.py
backend/tests/: conftest.py  test_csv_validator.py  test_embedding_builder.py  test_health.py  test_ingestion_api_integration.py  test_ingestion_endpoints.py  test_models.py  test_openrouter_client.py  test_openrouter_integration.py  test_order_processor.py  test_preference_engine.py  test_recommendation_engine.py  test_recommendation_integration.py  test_taste_profile_builder.py  test_taste_profile_integration.py  test_vector_store.py
(+171 files in other folders)
